[gd_scene load_steps=9 format=2]

[ext_resource path="res://actors/PlatformActor.gd" type="Script" id=1]
[ext_resource path="res://utility/Geometry2D.gd" type="Script" id=2]
[ext_resource path="res://actors/Gravity.gd" type="Script" id=3]
[ext_resource path="res://actors/Jump.gd" type="Script" id=4]
[ext_resource path="res://actors/ActionBus.gd" type="Script" id=5]
[ext_resource path="res://actors/Walk.gd" type="Script" id=6]
[ext_resource path="res://actors/Dash.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 64 )

[node name="PlatformActor" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -64 )
shape = SubResource( 3 )
script = ExtResource( 2 )

[node name="Gravity" type="Node" parent="."]
script = ExtResource( 3 )
strength = 4000.0

[node name="Jump" type="Node" parent="."]
script = ExtResource( 4 )
strength = 1000.0

[node name="PlatformActionBus" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Walk" type="Node" parent="."]
script = ExtResource( 6 )
speed = 800.0

[node name="Dash" type="Node" parent="."]
script = ExtResource( 7 )
speed = 2400.0
distance = 400.0
[connection signal="available_jumps_depleted" from="Jump" to="Dash" method="set_air_dash" binds= [ false ]]
[connection signal="available_jumps_replenished" from="Jump" to="Dash" method="set_air_dash" binds= [ true ]]
[connection signal="dash_pressed" from="PlatformActionBus" to="Dash" method="set_enabled" binds= [ true ]]
[connection signal="dash_pressed" from="PlatformActionBus" to="Walk" method="set_physics_process" binds= [ false ]]
[connection signal="dash_released" from="PlatformActionBus" to="Dash" method="stop"]
[connection signal="dash_released" from="PlatformActionBus" to="Walk" method="set_physics_process" binds= [ true ]]
[connection signal="jump_pressed" from="PlatformActionBus" to="Jump" method="apply"]
[connection signal="jump_released" from="PlatformActionBus" to="Jump" method="cancel"]
[connection signal="walk_pressed" from="PlatformActionBus" to="Dash" method="set_movement_direction"]
[connection signal="walk_pressed" from="PlatformActionBus" to="Walk" method="set_movement_direction"]
[connection signal="walk_released" from="PlatformActionBus" to="Walk" method="stop"]
[connection signal="finished" from="Dash" to="Walk" method="set_physics_process" binds= [ true ]]
[connection signal="ready" from="Dash" to="Dash" method="set_enabled" binds= [ false ]]
[connection signal="started" from="Dash" to="Jump" method="deplete"]
